--- a/index.html
+++ b/index.html
@@ -566,12 +566,12 @@ const quizData = [
   {
     "question": "Strategie bei der Entscheidungsfindung:",
     "options": [
-      "Vereinfacht die Entscheidungsfindung und dient als \"Faustregel\"",
+      "Vereinfacht die Entscheidungsfindung und dient als Faustregel",
       "Macht die Entscheidungsfindung komplexer und komplizierter",
       "Hat nur einen schwachen Bezug zur Entscheidungsfindung",
       "bietet zusätzlichen Raum für Diskussionen und verlängert den Entscheidungsfindungsprozess"
     ],
-    "correct": "Vereinfacht die Entscheidungsfindung und dient als \"Faustregel\""
+    "correct": "Vereinfacht die Entscheidungsfindung und dient als Faustregel"
   },
   {
     "question": "Strategie als Koordination:",
