--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@ const quizData = [
       "Desto schneller veraltet sie und muss ersetzt werden",
       "Desto unwahrscheinlicher ist es, dass sie eine Grundlage für einen nachhaltigen Wettbewerbsvorteil darstellt"
     ],
-    "correct": "esto größer ist ihre Fähigkeit, langfristig einen Wettbewerbsvorteil zu unterstützen"
+    "correct": "Desto größer ist ihre Fähigkeit, langfristig einen Wettbewerbsvorteil zu unterstützen"
   },
   {
     "question": "Was verkürzt die Lebensdauer der meisten Ressourcen, einschließlich Investitionsgütern und firmeneigener Technologie?",
