--- a/index.html
+++ b/index.html
@@ -486,12 +486,12 @@ const quizData = [
   {
     "question": "Die öffentlichen Erklärungen zur Strategie...",
     "options": [
-      "sind selten nützlich, da sie \"großspurig\" und \"klischeehaft\" sind",
+      "sind selten nützlich, da sie großspurig und klischeehaft sind",
       "spiegeln die internen strategischen Diskussionen und Entscheidungen nur ungenau wider",
       "sind in der Regel irreführend, da sie eher darauf abzielen, Wettbewerber in die Irre zu führen, als die Interessengruppen zu informieren",
       "sind durchgängig detailliert und transparent, mit einem umfassenden Fahrplan für den Unternehmenserfolg"
     ],
-    "correct": "sind selten nützlich, da sie \"großspurig\" und \"klischeehaft\" sind"
+    "correct": "sind selten nützlich, da sie großspurig und klischeehaft sind"
   },
   {
     "question": "Die Identifizierung der Strategie eines Unternehmens erfordert...",
