--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ const quizData = [
     "question": "Welche Komponenten der Strategie sollten in einem strategischen Spielplan formuliert weren?",
     "options": [
       "Zielsetzung (was sind die Ziele), Umfang (wo werden wir konkurrieren) und Vorteil (wie werden wir konkurrieren)",
-      "udgetzuweisung (wie viele Ressourcen werden den einzelnen Abteilungen zugewie-sen)",
+      "Budgetzuweisung (wie viele Ressourcen werden den einzelnen Abteilungen zugewie-sen)",
       "Mitarbeiterzufriedenheit (Sicherstellung der Zufriedenheit und Moral der Belegschaft)",
       "Marketingtaktik (spezifische Werbestrategien zur Gewinnung von Kunden)"
     ],
