--- a/index.html
+++ b/index.html
@@ -596,12 +596,12 @@ const quizData = [
   {
     "question": "Strategie als Orientierung:",
     "options": [
-      "nimiert die Mitarbeiter und gibt ihnen das Gefühl, dass sie ein klares Ziel haben",
+      "animiert die Mitarbeiter und gibt ihnen das Gefühl, dass sie ein klares Ziel haben",
       "Macht Entscheidungen schwieriger, da die Orientierung meist vage ist",
       "Hilft bei der Entwicklung eines Plans, da sie genaue Fristen beinhaltet",
       "Unterstützt einige Mitarbeiter in ihren internen Kämpfen gegen andere Mitarbeiter was die Orientierung betrifft"
     ],
-    "correct": "nimiert die Mitarbeiter und gibt ihnen das Gefühl, dass sie ein klares Ziel haben"
+    "correct": "animiert die Mitarbeiter und gibt ihnen das Gefühl, dass sie ein klares Ziel haben"
   },
   {
     "question": "Wie sehen freie Marktwirtschaftler (z. B. Milton Friedman) die Anforderungen an Unternehmen, sich mit umfassenderen Problemen der Gesellschaft auseinanderzusetzen? Sie nehmen soziale Verantwortung…",
