--- a/index.html
+++ b/index.html
@@ -1039,6 +1039,64 @@ const quizData = [
     ],
     "correct": "Identifizierung von Bereichen mit komparativer Ineffizienz und entsprechenden Kostentreibern"
   }
+
+{
+    "question": "Organisationale Fähigkeiten sind idiosynkratisch, das bedeutet sie sind",
+    "options": [
+      "einzigartig und schwer zu erfassen",
+      "für alle Unternehmen gleich, obwohl sie schwer zu erfassen sind",
+      "unterschiedlich von Unternehmen zu Unternehmen, können aber leicht erfasst werden",
+      "selten einmalig und deshalb leicht zu erfassen"
+    ],
+    "correct": "einzigartig und schwer zu erfassen"
+  }
+
+
+  {
+    "question": "Organisationale Fähigkeiten beruhen auf",
+    "options": [
+      "routiniertem Verhalten, das heißt ihre Wurzeln liegen in gemusterten, sich wiederholenden Handlungen",
+      "einzigartigem Verhalten, das jedes Mal anders ausgeführt wird",
+      "nicht-routiniertem Verhalten, das heißt einmalige Handlungen innerhalb eines Unternehmens",
+      "Organisationsstrukturen, bei denen das Verhalten keine Rolle spielt"
+    ],
+    "correct": "routiniertem Verhalten, das heißt ihre Wurzeln liegen in gemusterten, sich wiederholenden Handlungen"
+  }
+
+  {
+    "question": "Auf der individuellen Ebene entstehen Routinen durch",
+    "options": [
+      "ständige Wiederholungen und Handlungsmuster",
+      "das Lesen von Betriebshandbüchern",
+      "die formale Prozessgestaltung auf der Ebene des Managements",
+      "die formale Prozessbeschreibung für die Mitarbeiter"
+    ],
+    "correct": "ständige Wiederholungen und Handlungsmuster"
+  }
+
+  {
+    "question": "Organisationale Routine entwickelt sich durch",
+    "options": [
+      "Learning-by-doing",
+      "akademische Forschung",
+      "Vorschläge von Beratern",
+      "neue Betriebshandbücher"
+    ],
+    "correct": "Learning-by-doing"
+  }
+
+  {
+    "question": "Organisationale Fähigkeiten",
+    "options": [
+      "erfordern bewusstes und systematisches Handeln des Managements",
+      "entwickeln sich von selbst aus Routinen, sobald Routinen entstehen",
+      "haben nichts mit Routinen zu tun",
+      "gehen den Routinen voraus: erst wenn eine Fähigkeit vorhanden ist, beginnen Routinen zu entstehen"
+    ],
+    "correct": "erfordern bewusstes und systematisches Handeln des Managements"
+  }
+
+  
 ];
 
 // Fragen zufällig anordnen
