--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ const quizData = [
   {
     "question": "Die Unternehmen begrenzen ihre Preise auf ein wettbewerbsfähiges Niveau:",
     "options": [
-      "ereits durch die Androhung des Markteintritts als durch den tatsächlichen Eintritt von Wettbewerbern",
+      "bereits durch die Androhung des Markteintritts als durch den tatsächlichen Eintritt von Wettbewerbern",
       "Nur durch den tatsächlichen Markteintritt von Wettbewerbern",
       "Unabhängig vom drohenden oder tatsächlichen Markteintritt von Wettbewerbern",
       "die Unternehmen halten ihre Preise immer auf einem wettbewerbsfähigen Niveau"
